--- a/app/src/main/res/layout/item_note_list.xml
+++ b/app/src/main/res/layout/item_note_list.xml
@@ -1,13 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_margin="4dp"
-    android:layout_height="wrap_content">-->
 
 <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/note_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_margin="4dp"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -50,7 +45,7 @@
             android:text="Note Details"
             android:textSize="16sp"
             app:layout_constraintBottom_toTopOf="@id/iv_date"
-            app:layout_constraintEnd_toStartOf="@id/imageView"
+            app:layout_constraintEnd_toStartOf="@id/iv_delete"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/txt_note_title" />
 
@@ -107,7 +102,7 @@
             app:layout_constraintTop_toTopOf="@+id/iv_date" />
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/iv_delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
