--- a/app/src/main/res/layout/item_note_list.xml
+++ b/app/src/main/res/layout/item_note_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <androidx.cardview.widget.CardView xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/note_view"
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_margin="4dp"
@@ -20,12 +21,12 @@
             android:id="@+id/txt_note_title"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:fontFamily="@font/combo_regular"
             android:text="Note Title"
             android:textColor="#21F3E1"
             android:textSize="18sp"
             android:textStyle="bold"
-            android:fontFamily="@font/combo_regular"
-            app:layout_constraintBottom_toTopOf="@id/txt_note_details"
+            app:layout_constraintBottom_toTopOf="@+id/imageView"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
@@ -34,20 +35,19 @@
             android:id="@+id/txt_note_details"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="8dp"
-            android:layout_marginTop="4dp"
-            android:layout_marginEnd="2dp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
             android:ellipsize="end"
             android:fontFamily="casual"
             android:gravity="center_vertical"
             android:maxLines="1"
             android:text="Note Details"
             android:textSize="16sp"
-            app:layout_constraintBottom_toTopOf="@id/iv_date"
-            app:layout_constraintEnd_toStartOf="@id/iv_delete"
+            app:layout_constraintBottom_toTopOf="@+id/iv_date"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/txt_note_title" />
+            app:layout_constraintTop_toBottomOf="@+id/textView" />
 
         <ImageView
             android:id="@+id/iv_date"
@@ -102,17 +102,33 @@
             app:layout_constraintTop_toTopOf="@+id/iv_date" />
 
         <ImageView
-            android:id="@+id/iv_delete"
-            android:layout_width="wrap_content"
+            android:id="@+id/imageView"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="4dp"
-            app:layout_constraintBottom_toBottomOf="@+id/txt_note_details"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="4dp"
+            android:layout_marginBottom="4dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/txt_note_details"
-            app:layout_constraintTop_toTopOf="@+id/txt_note_details"
-            app:srcCompat="@drawable/ic_delete" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/txt_note_title"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="2dp"
+            android:layout_marginBottom="2dp"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toTopOf="@+id/txt_note_details"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/imageView"
+            tools:text="Link" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
-<!--
-</FrameLayout>-->
