--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,4 +13,13 @@
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
     </style>
+
+    <style name="TextButtonWithIconStyle" parent="@style/Widget.Material3.Button.TextButton.Icon">
+        <item name="android:drawablePadding">16dp</item>
+        <item name="android:gravity">start</item>
+        <item name="android:textSize">22sp</item>
+        <item name="android:layout_marginStart">4dp</item>
+        <item name="android:layout_marginTop">8dp</item>
+        <item name="android:layout_marginEnd">4dp</item>
+    </style>
 </resources>
