--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -64,6 +64,7 @@
                             android:id="@+id/ed_note_title"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="2dp"
                             android:hint="@string/note_title_hint"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
                             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -81,11 +82,11 @@
                             android:id="@+id/tv_date"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
+                            android:layout_marginStart="2dp"
                             android:layout_marginTop="16dp"
-                            tools:text="February 10"
                             app:layout_constraintStart_toStartOf="@+id/guideline2"
-                            app:layout_constraintTop_toBottomOf="@+id/ed_note_title" />
+                            app:layout_constraintTop_toBottomOf="@+id/ed_note_title"
+                            tools:text="February 10" />
 
                         <com.google.android.material.textview.MaterialTextView
                             android:id="@+id/tv_time"
@@ -124,9 +125,11 @@
                             android:id="@+id/iv_note_image"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginTop="8dp"
-                            android:layout_marginEnd="8dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="10dp"
+                            android:layout_marginEnd="2dp"
+                            android:layout_marginBottom="10dp"
+                            android:scaleType="centerCrop"
                             app:layout_constraintBottom_toTopOf="@+id/tv_note_attached_link"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
                             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -137,10 +140,10 @@
                             android:id="@+id/tv_note_attached_link"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
-                            android:layout_marginStart="16dp"
-                            android:layout_marginTop="16dp"
-                            android:layout_marginEnd="16dp"
-                            android:layout_marginBottom="16dp"
+                            android:layout_marginStart="4dp"
+                            android:layout_marginTop="4dp"
+                            android:layout_marginEnd="4dp"
+                            android:layout_marginBottom="8dp"
                             android:textSize="16sp"
                             app:layout_constraintBottom_toTopOf="@+id/ed_note_details"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
@@ -152,6 +155,7 @@
                             android:id="@+id/ed_note_details"
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
+                            android:layout_marginStart="2dp"
                             android:gravity="top"
                             android:hint="@string/note_details_hint"
                             app:layout_constraintBottom_toTopOf="@+id/guideline5"
@@ -175,57 +179,59 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scroll_view">
 
                 <ImageButton
                     android:id="@+id/btn_bold"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_bold"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:background="@null"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    android:src="@drawable/ic_bold" />
 
                 <ImageButton
                     android:id="@+id/btn_italic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_italic"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:background="@null"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    android:src="@drawable/ic_italic" />
 
                 <ImageButton
                     android:id="@+id/btn_underline"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_underline"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:background="@null"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    android:src="@drawable/ic_underline" />
 
                 <ImageButton
                     android:id="@+id/btn_add_image"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_attach_image"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:background="@null"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    android:src="@drawable/ic_attach_image" />
 
                 <ImageButton
                     android:id="@+id/btn_attach_link"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:src="@drawable/ic_link"
                     android:layout_marginStart="5dp"
                     android:layout_marginEnd="5dp"
                     android:background="@null"
-                    android:contentDescription="TODO" />
+                    android:contentDescription="TODO"
+                    android:src="@drawable/ic_link" />
         </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
 
