--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -20,7 +20,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
-                    tools:visibility="visible">
+                    >
 
                         <androidx.constraintlayout.widget.Guideline
                             android:id="@+id/guideline"
@@ -144,6 +144,7 @@
                             android:layout_marginTop="4dp"
                             android:layout_marginEnd="4dp"
                             android:layout_marginBottom="8dp"
+                            android:textColor="@color/blue"
                             android:textSize="16sp"
                             app:layout_constraintBottom_toTopOf="@+id/ed_note_details"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
