refact: change visibility of the image and link to gone and adjuest image view bounds.

--- a/app/src/main/res/layout/fragment_edit_note.xml
+++ b/app/src/main/res/layout/fragment_edit_note.xml
@@ -129,7 +129,9 @@
                             android:layout_marginTop="10dp"
                             android:layout_marginEnd="2dp"
                             android:layout_marginBottom="10dp"
-                            android:scaleType="centerCrop"
+                            android:scaleType="fitCenter"
+                            android:adjustViewBounds="true"
+                            android:visibility="gone"
                             app:layout_constraintBottom_toTopOf="@+id/tv_note_attached_link"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
                             app:layout_constraintStart_toStartOf="@+id/guideline2"
@@ -146,6 +148,7 @@
                             android:layout_marginBottom="8dp"
                             android:textColor="@color/blue"
                             android:textSize="16sp"
+                            android:visibility="gone"
                             app:layout_constraintBottom_toTopOf="@+id/ed_note_details"
                             app:layout_constraintEnd_toStartOf="@+id/guideline4"
                             app:layout_constraintStart_toStartOf="@+id/guideline2"
