--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,17 @@
     <dimen name="guideline_horizontal_top_constraint">40dp</dimen>
     <dimen name="guideline_horizontal_bottom_constraint">16dp</dimen>
     <dimen name="guideline_vertical_constraint">8dp</dimen>
+
+    <dimen name="_2dp">2dp</dimen>
+    <dimen name="_4dp">4dp</dimen>
+    <dimen name="_8dp">8dp</dimen>
+    <dimen name="_16dp">16dp</dimen>
+    <dimen name="_32dp">32dp</dimen>
+
+    <dimen name="_12sp">14sp</dimen>
+    <dimen name="_14sp">14sp</dimen>
+    <dimen name="_16sp">16sp</dimen>
+    <dimen name="_18sp">18sp</dimen>
+    <dimen name="_24sp">24sp</dimen>
+
 </resources>
